# website

./: Cargo.toml  LICENSE  README.md  build_cloudflare.sh  index.html  rust-toolchain.toml  tailwind.config.js
.cargo/: config.toml
.github/workflows/: publish_cloudlare.yml
projects/: billdivide.md  bingotingo.md  musicpiped.md  selfcloud.md  tvmate.md
public/: site.webmanifest
public/assets/fonts/Montserrat/: font.css
public/assets/scripts/: cobe.js
src/: about.rs  app.rs  contact.rs  error_404.rs  footer.rs  header.rs  home.rs  lib.rs  main.rs  picture.rs  project.rs
src/icons/: mod.rs
src/projects/: mod.rs  project_view.rs
src/utils/: mod.rs  title.rs
style/: main.scss  tailwind.css
